# ibrae-fenia-docker

./: README.md  setup.cfg
fenia_docker/: Dockerfile  __main__.py  clean.sh  docker-compose.yml  load.sh  main.sh  readme.txt  test.sh
fenia_docker/test/: zoneMaxPoint  zoneMaxT  zoneNames  zoneVol
fenia_docker/test/constant/: T  pointsCoord  termProperty
fenia_docker/test/constant/polyMesh/: blockMeshDict  boundary  cellZones  faces  neighbour  owner  points
fenia_docker/test/system/: controlDict  eqFeType  feSolution
