[metadata]
name = ibrae-fenia-docker
version = 0.0.1
author = Roman Butov
author_email = romanbutov637@gmail.com
description = FENIA Docker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/romanzes637/ibrae-fenia-docker
project_urls =
    Bug Tracker = https://github.com/romanzes637/ibrae-fenia-docker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
